quitting for the day

--- a/Class12/exercise6/basic-property-binding/angular.json
+++ b/Class12/exercise6/basic-property-binding/angular.json
@@ -6,7 +6,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "create-complex-structure": {
+    "basic-property-binding": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:class": {
@@ -41,15 +41,17 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/create-complex-structure",
+            "outputPath": "dist/basic-property-binding",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets"
+            ],
             "styles": [
-              "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "src/styles.css"
             ],
             "scripts": []
           },
@@ -90,10 +92,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "create-complex-structure:build:production"
+              "browserTarget": "basic-property-binding:build:production"
             },
             "development": {
-              "browserTarget": "create-complex-structure:build:development"
+              "browserTarget": "basic-property-binding:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -101,7 +103,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "create-complex-structure:build"
+            "browserTarget": "basic-property-binding:build"
           }
         },
         "test": {
@@ -111,13 +113,18 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
-            "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.css"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets"
+            ],
+            "styles": [
+              "src/styles.css"
+            ],
             "scripts": []
           }
         }
       }
     }
   },
-  "defaultProject": "create-complex-structure"
+  "defaultProject": "basic-property-binding"
 }
