--- a/Class14/exercise4/angular-basic-custom-event-exercise/package.json
+++ b/Class14/exercise4/angular-basic-custom-event-exercise/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "input-and-output-demo",
+  "name": "angular-basic-custom-event-exercise",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
