--- a/max/services-start/package.json
+++ b/max/services-start/package.json
@@ -26,8 +26,8 @@
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.2",
-    "@angular/cli": "^11.0.4",
+    "@angular-devkit/build-angular": "~0.1102.3",
+    "@angular/cli": "^11.1.2",
     "@angular/compiler-cli": "^11.0.5",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
