--- a/max/services-assignment-start/package.json
+++ b/max/services-assignment-start/package.json
@@ -12,7 +12,6 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^11.0.5",
-    "@angular/cli": "^11.0.4",
     "@angular/common": "^11.0.5",
     "@angular/compiler": "^11.0.5",
     "@angular/core": "^11.0.5",
@@ -27,7 +26,7 @@
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.3",
+    "@angular-devkit/build-angular": "^0.1100.4",
     "@angular/cli": "^11.0.4",
     "@angular/compiler-cli": "^11.0.5",
     "@types/jasmine": "~3.6.0",
