To Do List - attempting deploy

--- a/SideProjects/todolist/package.json
+++ b/SideProjects/todolist/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "heroku-postbuild": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -36,5 +37,9 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.3.5"
+  },
+  "engines": {
+    "node": "17.9.0",
+    "npm": "8.5.5"
   }
 }
