--- a/SideProjects/todolist/.gitignore
+++ b/SideProjects/todolist/.gitignore
@@ -1,5 +1,9 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# keys
+
+
+
 # compiled output
 /dist
 /tmp
@@ -43,3 +47,4 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+src/google.html
