--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ max/recipe-app/src/environments/environment.ts
 max/recipe-app/src/environments/environment.ts
 max/recipe-app/src/environments/environment.prod.ts
 max/recipe-app/src/environments/environment.ts
+SideProjects/.DS_Store
+.DS_Store
